Add game is won logic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <!-- JQUERY & JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script defer src="./main.js"></script>
+  <script defer src="./assets/js/confetti.min.js"></script>
+  <script defer src="./assets/js/main.js"></script>
 </head>
 
 <body>
