Add modal containers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 </head>
 
 <body>
-  <main id="container"></main>
+  <main id="container">
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div>
+  </main>
 
   <footer>
     <button id="fill-shapes">here we go!</button>
