Make IDs more semantic

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <main id="container"></main>
 
   <footer>
-    <button id="fill-shapes">here we go!</button>
-    <button id="clear-shapes">mamma mia</button>
+    <button id="btn-fill-shapes">here we go!</button>
+    <button id="btn-clear-shapes">mamma mia</button>
   </footer>
 
 </body>
