Add instructions modal feature

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
 <body>
   <main id="container">
-    <div id="myModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+    <div id="myModal" class="modal-background">
+      <div id="modal-clear" class="modal-content">
+        <p><strong>Clear</strong> all shapes!</p>
+      </div>
+      <div id="modal-fill" class="modal-content">
+        <p><strong>Fill</strong> all shapes!</p>
       </div>
     </div>
   </main>
