Add modal logic

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <div id="myModal" class="modal-background">
       <div id="modal-clear" class="modal-content">
         <p><strong>Clear</strong> all shapes!</p>
+        <button class="btn btn-modal">OK</button>
       </div>
       <div id="modal-fill" class="modal-content">
         <p><strong>Fill</strong> all shapes!</p>
+        <button class="btn btn-modal">OK</button>
       </div>
     </div>
   </main>
